--- a/force-app/main/default/classes/PagedResult.cls
+++ b/force-app/main/default/classes/PagedResult.cls
@@ -1,7 +1,7 @@
 public with sharing class PagedResult {
     @AuraEnabled
     public Integer pageSize { get; set; }
-
+//gokul changes
     @AuraEnabled
     public Integer pageNumber { get; set; }
 
