--- a/force-app/main/default/classes/GeocodingService.cls
+++ b/force-app/main/default/classes/GeocodingService.cls
@@ -6,7 +6,7 @@ public with sharing class GeocodingService {
         List<GeocodingAddress> addresses
     ) {
         List<Coordinates> computedCoordinates = new List<Coordinates>();
-
+//gokul edit
         for (GeocodingAddress address : addresses) {
             String geocodingUrl = BASE_URL;
             geocodingUrl += (String.isNotBlank(address.street))
