--- a/force-app/main/default/classes/TestSampleDataController.cls
+++ b/force-app/main/default/classes/TestSampleDataController.cls
@@ -9,7 +9,7 @@ private class TestSampleDataController {
         Integer propertyNumber = [SELECT COUNT() FROM Property__c];
         Integer brokerNumber = [SELECT COUNT() FROM Broker__c];
         Integer contactNumber = [SELECT COUNT() FROM Contact];
-
+//third
         System.assert(propertyNumber > 0, 'Expected properties were created.');
         System.assert(brokerNumber > 0, 'Expected brokers were created.');
         System.assert(contactNumber > 0, 'Expected contacts were created.');
