--- a/force-app/main/default/classes/GeocodingServiceTest.cls
+++ b/force-app/main/default/classes/GeocodingServiceTest.cls
@@ -9,6 +9,7 @@ private with sharing class GeocodingServiceTest {
     private static final Decimal LONGITUDE = 31.333;
 //gokul_test_13
     @isTest
+    //new
     static void successResponse() {
         // GIVEN
         GeocodingService.GeocodingAddress address = new GeocodingService.GeocodingAddress();
