--- a/force-app/main/default/classes/GeocodingServiceTest.cls
+++ b/force-app/main/default/classes/GeocodingServiceTest.cls
@@ -14,6 +14,7 @@ private with sharing class GeocodingServiceTest {
     //test 3
     //test 4
     //test 5
+    //Test6
     static void successResponse() {
         // GIVEN
         GeocodingService.GeocodingAddress address = new GeocodingService.GeocodingAddress();
